--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,9 @@
   text-align: center;
   margin: 50px 0 40px 0;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+}
