Refactoring App.css

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
+/* .grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+} */
+
 .title {
   text-align: center;
   margin: 50px 0 40px 0;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  justify-items: center;
-}
+/* .link {
+  margin-top: 380px;
+} */
